Fix fiter layout problem

--- a/admin/views/assets/stylesheets/scss/app/_labels.scss
+++ b/admin/views/assets/stylesheets/scss/app/_labels.scss
@@ -2,8 +2,10 @@
 // --------------------------------------------------
 
 .qor-label-container {
+  display: inline-block;
   padding-top: 2px;
   padding-bottom: 2px;
+  vertical-align: middle;
 }
 
 .qor-label {
